Updated to use gribbit.keys instead of gribbit_keys.py; added TODO item(s)

--- a/TODO
+++ b/TODO
@@ -2,4 +2,4 @@
   settings conflict? Which settings "win", the ones in the first or in the last file?
 * discover width of the window we're in (and react to changes???) so we know
   how wide to make the TextWrapper instance
-
+* Give instructions as to how to generate gribbit.keys
